- TW-1878 uuids subcommand produces a space-delimited list, not comma-delimited
          (thanks to Scott Kostyshak).
- TW-1881 Missing last character(s) in Description field
          (thanks to Hubert Toullec).
- TW-1881 default.scheduled seems not to work
          (thanks to Onion).
- TW-1885 Task Sync does not send TLS SNI headers
          (thanks to Dan Callahan).
- Added 'juhannus' as a synonym for 'midsommarafton'
          (thanks to Lynoure Braakman).
- Deprecated the 'DUETODAY' virtual tag, which is a synonym for the 'TODAY'
  virtual tag.
- Removed deprecated 'alias._query' setting.
- Fixed ambiguity in the esp-ESP localization
          (thanks to Fidel Mato).
- Deprecated the 'new-uuid' verbosity option, since its functionality can be
  removed by merging with 'new-id'.
- Correct a false-positive warning when a due date is removed and a wait is
  added.
- Added 'QUARTER' virtual tag.
- Fixed unquoted glob in bash completion script
          (thanks to Ran Benita).
- Deprecated use of alternate Boolean configuration settings. Use values "0" for
  off, and "1" for on. Avoid used of "on", "off", "true", "t", "false", "f",
  "yes", "y", "no", "n".
- Fixed test harness for Python 3.x.
          (thanks to jrabbit).
- Improved certificate validation diagnostics
          (thanks to Jelle van der Waa).
- Improved portability for SunOS-like OSes.
          (thanks to Antonio Huete Jimenez).
- Updated the 'timesheet' command with a more compact report that accepts a
  filter, and has a default filter showing the last four weeks of completed and
  started tasks.
- Added 'history.weekly', 'history.daily', 'ghistory.weekly', 'ghistory.daily'
  report variations, with code refactoring.
          (thanks to Lukas Barth).
- New DOM references: annotations.count, tw.syncneeded.
- The message telling you to sync now indicates how many local changes will be
  synced.

------ current release ---------------------------
