@@ -59,6 +59,8 @@
           (thanks to Onion).
 - TW-1885 Task Sync does not send TLS SNI headers
           (thanks to Dan Callahan).
+- TW-1903 grammar error -- There are 1 local changes.
+          (thanks to Eric Hymowitz).
 - Added 'juhannus' as a synonym for 'midsommarafton'
           (thanks to Lynoure Braakman).
 - Deprecated the 'DUETODAY' virtual tag, which is a synonym for the 'TODAY'
